refactor(global): INFRA-840 a lot of renamings everywhere

--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -52,13 +52,13 @@ jobs:
           WERF_SET_CI_REGISTRY_IMPORTER_URL: "global.ci_registry_importer_url=review-${{ env.REVIEW_URL_PREFIX }}-registry.r.doma.ai"
           WERF_SET_CI_MINIAPP_URL: "global.ci_miniapp_url=review-${{ env.REVIEW_URL_PREFIX }}-miniapp.r.doma.ai"
           WERF_SET_CI_PROPERTY_IMPORTER_URL: "global.ci_property_importer_url=review-${{ env.REVIEW_URL_PREFIX }}-property-importer.r.doma.ai"
-          WERF_SET_CI_CLASSIFIER_URL: "global.ci_classifier_url=review-${{ env.REVIEW_URL_PREFIX }}-ml.r.doma.ai"
+          WERF_SET_CI_CLASSIFIERS_API_URL: "global.ci_classifiers_api_url=review-${{ env.REVIEW_URL_PREFIX }}-ml.r.doma.ai"
           WERF_SET_CI_ADDRESS_SERVICE_URL: "global.ci_address_service_url=review-${{ env.REVIEW_URL_PREFIX }}-address-service.r.doma.ai"
           WERF_SET_CI_TELEPHONY_URL: "global.ci_telephony_url=review-${{ env.REVIEW_URL_PREFIX }}-telephony.r.doma.ai"
           WERF_SET_CI_DEV_PORTAL_WEB_URL: "global.ci_dev_portal_web_url=review-${{ env.REVIEW_URL_PREFIX }}-developers.r.doma.ai"
-          WERF_SET_CI_PASSAPP_URL: "global.ci_passapp_url=review-${{ env.REVIEW_URL_PREFIX }}-miniapp-pass.r.doma.ai"
+          WERF_SET_CI_PASS_URL: "global.ci_pass_url=review-${{ env.REVIEW_URL_PREFIX }}-miniapp-pass.r.doma.ai"
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.r.doma.ai"
-          WERF_SET_CI_METERS_BILLING_INTEGRATION_URL: "global.ci_meters_billing_integration_url=meters-billing-integration.r.doma.ai"
+          WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.r.doma.ai"
           WERF_SET_CI_NAMESPACE: "global.ci_namespace=${{ env.REVIEW_NAMESPACE }}"
           WERF_SET_CI_URL_PREFIX: "global.ci_url_prefix=${{ env.REVIEW_URL_PREFIX }}"
           WERF_NAMESPACE: ${{ env.REVIEW_NAMESPACE }}
