--- a/.github/workflows/deploy_development.yaml
+++ b/.github/workflows/deploy_development.yaml
@@ -54,11 +54,11 @@ jobs:
           WERF_SET_CI_REGISTRY_IMPORTER_URL: "global.ci_registry_importer_url=registry.d.doma.ai"
           WERF_SET_CI_MINIAPP_URL: "global.ci_miniapp_url=miniapp.d.doma.ai"
           WERF_SET_CI_PROPERTY_IMPORTER_URL: "global.ci_property_importer_url=property-importer.d.doma.ai"
-          WERF_SET_CI_CLASSIFIER_URL: "global.ci_classifier_url=ml.d.doma.ai"
+          WERF_SET_CI_CLASSIFIERS_API_URL: "global.ci_classifiers_api_url=ml.d.doma.ai"
           WERF_SET_CI_ADDRESS_SERVICE_URL: "global.ci_address_service_url=address-service.d.doma.ai"
           WERF_SET_CI_TELEPHONY_URL: "global.ci_telephony_url=telephony.d.doma.ai"
           WERF_SET_CI_DEV_PORTAL_WEB_URL: "global.ci_dev_portal_web_url=developers.d.doma.ai"
-          WERF_SET_CI_PASSAPP_URL: "global.ci_passapp_url=miniapp-pass.d.doma.ai"
+          WERF_SET_CI_PASS_URL: "global.ci_pass_url=miniapp-pass.d.doma.ai"
           WERF_SET_CI_DOCUMENTS_URL: "global.ci_documents_url=documents.d.doma.ai"
           WERF_SET_CI_DEV_PORTAL_API_URL: "global.ci_dev_portal_api_url=developers-api.d.doma.ai"
           WERF_SET_CI_EMPLOYEE_BOT_URL: "global.ci_employee_bot_url=telegram-employee-bot.d.doma.ai"
@@ -67,7 +67,7 @@ jobs:
           WERF_SET_CI_RESIDENT_APP_URL: "global.ci_resident_app_url=m.d.doma.ai"
           WERF_SET_CI_ANNOUNCEMENT_GENERATOR_URL: "global.ci_announcement_url=announcement-generator.d.doma.ai"
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.d.doma.ai"
-          WERF_SET_CI_METERS_BILLING_INTEGRATION_URL: "global.ci_meters_billing_integration_url=meters-billing-integration.d.doma.ai"
+          WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.d.doma.ai"
           WERF_SET_CI_NAMESPACE: "global.ci_namespace=development"
           WERF_NAMESPACE: "development"
           WERF_VIRTUAL_MERGE_FROM_COMMIT: "true"
