--- a/.github/workflows/deploy_stage.yaml
+++ b/.github/workflows/deploy_stage.yaml
@@ -53,11 +53,11 @@ jobs:
           WERF_SET_CI_REGISTRY_IMPORTER_URL: "global.ci_registry_importer_url=registry.s1.doma.ai"
           WERF_SET_CI_MINIAPP_URL: "global.ci_miniapp_url=miniapp.s1.doma.ai"
           WERF_SET_CI_PROPERTY_IMPORTER_URL: "global.ci_property_importer_url=property-importer.s1.doma.ai"
-          WERF_SET_CI_CLASSIFIER_URL: "global.ci_classifier_url=ml.s1.doma.ai"
+          WERF_SET_CI_CLASSIFIERS_API_URL: "global.ci_classifiers_api_url=ml.s1.doma.ai"
           WERF_SET_CI_ADDRESS_SERVICE_URL: "global.ci_address_service_url=address-service.s1.doma.ai"
           WERF_SET_CI_TELEPHONY_URL: "global.ci_telephony_url=telephony.s1.doma.ai"
           WERF_SET_CI_DEV_PORTAL_WEB_URL: "global.ci_dev_portal_web_url=developers.s1.doma.ai"
-          WERF_SET_CI_PASSAPP_URL: "global.ci_passapp_url=miniapp-pass.s1.doma.ai"
+          WERF_SET_CI_PASS_URL: "global.ci_pass_url=miniapp-pass.s1.doma.ai"
           WERF_SET_CI_DOCUMENTS_URL: "global.ci_documents_url=documents.s1.doma.ai"
           WERF_SET_CI_DEV_PORTAL_API_URL: "global.ci_dev_portal_api_url=developers-api.s1.doma.ai"
           WERF_SET_CI_EMPLOYEE_BOT_URL: "global.ci_employee_bot_url=telegram-employee-bot.s1.doma.ai"
@@ -66,7 +66,7 @@ jobs:
           WERF_SET_CI_RESIDENT_APP_URL: "global.ci_resident_app_url=m.s1.doma.ai"
           WERF_SET_CI_ANNOUNCEMENT_GENERATOR_URL: "global.ci_announcement_url=announcement-generator.s1.doma.ai"
           WERF_SET_CI_NEWS_GREENHOUSE_URL: "global.ci_news_greenhouse_url=news-sharing-greendom.s1.doma.ai"
-          WERF_SET_CI_METERS_BILLING_INTEGRATION_URL: "global.ci_meters_billing_integration_url=meters-billing-integration.s1.doma.ai"
+          WERF_SET_CI_METER_IMPORTER_URL: "global.ci_meter_importer_url=meters-billing-integration.s1.doma.ai"
           WERF_NAMESPACE: "stage"
           WERF_VIRTUAL_MERGE_FROM_COMMIT: "true"
           WERF_SET_CI_REF: "ci.werf.io/ref=${GITHUB_REF_NAME}"
