--- a/werf.yaml
+++ b/werf.yaml
@@ -985,7 +985,7 @@ shell:
     - "rm -rf /app/.config"
 
 ---
-image: meters_billing_integration
+image: meter_importer
 fromImage: base
 fromCacheVersion: "2"
 git:
@@ -1023,8 +1023,8 @@ shell:
     - "echo 'NODE_ENV=production' >> /app/.env"
     - "echo 'FILE_FIELD_ADAPTER=local' >> /app/.env"
     - "yarn workspace @app/meter-importer next telemetry disable"
-    - "yarn workspace @app/meters-billing-integration build:deps"
-    - "yarn workspace @app/meters-billing-integration build"
+    - "yarn workspace @app/meter-importer build:deps"
+    - "yarn workspace @app/meter-importer build"
     - "rm -rf /app/.env"
     - "rm -rf /app/.config"
 
