--- a/.github/workflows/deploy_review.yaml
+++ b/.github/workflows/deploy_review.yaml
@@ -33,9 +33,9 @@ jobs:
           known_hosts: ${{ secrets.SSH_DOCK_SERVER_KNOWN_HOSTS }}
           if_key_exists: replace
       - name: Set env for namespace
-        run: echo "REVIEW_NAMESPACE=$(echo review-${GITHUB_REF##*/} | sed 's/\_/-/g')" >> $GITHUB_ENV
+        run: echo "REVIEW_NAMESPACE=$(echo review-${GITHUB_REF##*/} | sed 's/[^a-zA-Z0-9_-]//g; s/_/-/g')" >> $GITHUB_ENV
       - name: Set env url prefix
-        run: echo "REVIEW_URL_PREFIX=$(echo ${GITHUB_REF##*/} | sed 's/\_/-/g' | cut -c -30)" >> $GITHUB_ENV
+        run: echo "REVIEW_URL_PREFIX=$(echo ${GITHUB_REF##*/} | sed 's/[^a-zA-Z0-9_-]//g; s/_/-/g' | cut -c -30)" >> $GITHUB_ENV
       - name: Converge
         uses: werf/actions/converge@v1.2
         with:
