feat(condo): DOMA-11012 update deps

--- a/apps/condo/package.json
+++ b/apps/condo/package.json
@@ -139,6 +139,7 @@
     "next-cookies": "^2.0.3",
     "next-transpile-modules": "^7.0.0",
     "node-fetch": "^2.6.7",
+    "node-telegram-bot-api": "^0.64.0",
     "numeral": "2.0.6",
     "nunjucks": "^3.2.4",
     "oidc-provider": "7.14.3",
