feat(migrator): INFRA-873 detect redis-dependent packages

--- a/packages/migrator/tsconfig.json
+++ b/packages/migrator/tsconfig.json
@@ -12,6 +12,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "sourceMap": true,
-    "target": "ES6"
-  },
+    "target": "ES6",
+    "resolveJsonModule": true,
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
+  }
 }
