--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -40,7 +40,13 @@
   },
   "devDependencies": {
     "@open-condo/tsconfig": "workspace:^",
+    "@types/node": "^16",
     "commander": "^11.0.0",
-    "tsup": "^8.3.6"
+    "tsup": "^8.3.6",
+    "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "glob": "^11.0.1",
+    "zod": "^3.24.2"
   }
 }
