--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -46,6 +46,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "cli-table3": "^0.6.5",
+    "dotenv": "^16.4.7",
     "glob": "^11.0.1",
     "zod": "^3.24.2"
   }
