--- a/packages/migrator/tsconfig.json
+++ b/packages/migrator/tsconfig.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@open-condo/tsconfig/base.json",
   "compilerOptions": {
+    "lib": ["ESNext"],
     "allowSyntheticDefaultImports": true,
     "module": "ES2022",
     "moduleResolution": "Bundler",
