--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@open-condo/tsconfig": "workspace:^",
     "@types/node": "^16",
+    "@types/prompts": "^2.4.9",
     "commander": "^11.0.0",
     "tsup": "^8.3.6",
     "typescript": "^5.5.4"
@@ -49,6 +50,7 @@
     "cli-table3": "^0.6.5",
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
+    "prompts": "^2.4.2",
     "zod": "^3.24.2"
   }
 }
