--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -17,7 +17,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest"
   },
   "bin": {
     "condo-migrator": "dist/cli.js",
@@ -39,11 +40,17 @@
     "access": "public"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@open-condo/tsconfig": "workspace:^",
     "@types/ioredis": "^4.28.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "^16",
     "@types/prompts": "^2.4.9",
+    "@types/tmp": "^0.2.6",
     "commander": "^11.0.0",
+    "jest": "^29.7.0",
+    "tmp": "^0.2.3",
+    "ts-jest": "^29.2.5",
     "tsup": "^8.3.6",
     "typescript": "^5.5.4"
   },
