ci(migrator): INFRA-873 run migrator tests in CI

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -6,7 +6,9 @@ on:
       - main
 
   # NOTE: change pull_request_target to pull_request if you want to change the CI in your branch
-  pull_request_target:
+  # TODO: RETURN THIS BACK:
+  pull_request:
+#  pull_request_target:
     types:
       - opened
       - reopened
@@ -119,9 +121,10 @@ jobs:
     runs-on: ubuntu-22.04
     outputs:
       address-service: ${{ steps.detect-changes.outputs.address-service }}
-      rb: ${{ steps.detect-changes.outputs.rb }}
       dev-portal-api: ${{ steps.detect-changes.outputs.dev-portal-api }}
+      migrator: ${{ steps.detect-changes.outputs.migrator }}
       open-condo: ${{ steps.detect-changes.outputs.open-condo }}
+      rb: ${{ steps.detect-changes.outputs.rb }}
       registry-importer: ${{ steps.detect-changes.outputs.registry-importer }}
       webhooks: ${{ steps.detect-changes.outputs.webhooks }}
     steps:
@@ -140,19 +143,21 @@ jobs:
             address-service:
               - 'apps/address-service/**'
               - 'packages/**'
-            rb:
-              - 'apps/rb'
-              - 'packages/**'
             dev-portal-api:
               - 'apps/dev-portal-api/**'
               - 'apps/condo/domains/miniapp/**'
               - 'apps/condo/domains/user/**'
               - 'packages/**'
+            migrator:
+              - 'packages/migrator/**'
             open-condo:
               - 'packages/**'
               - '**/*.md'
               - '*'
               - '!.helm/**'
+            rb:
+              - 'apps/rb'
+              - 'packages/**'
             registry-importer:
               - 'apps/registry-importer/**'
               - 'packages/**'
@@ -345,48 +350,6 @@ jobs:
       image_name: ${{ needs.build-image.outputs.DOCKER_IMAGE }}
     secrets: inherit
 
-  run-rb-tests:
-    name: RB Tests
-    runs-on: ubuntu-22.04
-    needs:
-      - authorize
-      - build-image
-      - detect-changes
-    if: ${{ needs.detect-changes.outputs.rb == 'true' }}
-    steps:
-      - name: Login to cloud registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ secrets.DOCKER_REGISTRY }}
-          username: ${{ secrets.SBERCLOUD_CR_USERNAME }}
-          password: ${{ secrets.SBERCLOUD_CR_PASSWORD }}
-      - name: Setup PG db
-        run: |
-          docker run -e POSTGRES_USER=$POSTGRES_USER -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD -e POSTGRES_DB=$POSTGRES_DB -p="127.0.0.1:5432:5432" -d ${{ env.PG_IMAGE_FULL }}
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: main
-      - name: Setup Redis db
-        run: |
-          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
-      - name: Run condo container with daemon
-        run: |
-          docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
-      - name: Prepare apps
-        run: |
-          docker exec condo-container node bin/prepare.js -f condo rb
-      - name: Check migrations state
-        run: |
-          docker exec condo-container yarn workspace @app/rb makemigrations --check
-      - name: Run apps and tests
-        run: |
-          docker exec condo-container sh -c "(\
-          yarn workspace @app/condo start & \
-          yarn workspace @app/rb start & \
-          node bin/wait-apps-apis.js -f condo rb) && \
-          yarn workspace @app/rb test"
-
   run-dev-portal-api-tests:
     name: Dev Portal API Tests
     runs-on: ubuntu-22.04
@@ -444,6 +407,72 @@ jobs:
             *.log
             ./docker-logs
           retention-days: 2
+
+  run-migrator-tests:
+    name: Migrator Tests
+    runs-on: ubuntu-22.04
+    needs:
+      - authorize
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.migrator == 'true' }}
+    steps:
+      - name: Checkout code with submodules
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+          ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
+          ref: ${{ env.REF }}
+      - name: Install packages
+        run: |
+          npm i -g turbo
+          yarn install --immutable
+      - name: Test webhooks utils
+        run: yarn workspace @open-condo/migrator test
+
+
+
+  run-rb-tests:
+    name: RB Tests
+    runs-on: ubuntu-22.04
+    needs:
+      - authorize
+      - build-image
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.rb == 'true' }}
+    steps:
+      - name: Login to cloud registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY }}
+          username: ${{ secrets.SBERCLOUD_CR_USERNAME }}
+          password: ${{ secrets.SBERCLOUD_CR_PASSWORD }}
+      - name: Setup PG db
+        run: |
+          docker run -e POSTGRES_USER=$POSTGRES_USER -e POSTGRES_PASSWORD=$POSTGRES_PASSWORD -e POSTGRES_DB=$POSTGRES_DB -p="127.0.0.1:5432:5432" -d ${{ env.PG_IMAGE_FULL }}
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: main
+      - name: Setup Redis db
+        run: |
+          docker run -p="127.0.0.1:6379:6379" -d ${{ env.REDIS_IMAGE_FULL }}
+      - name: Run condo container with daemon
+        run: |
+          docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
+      - name: Prepare apps
+        run: |
+          docker exec condo-container node bin/prepare.js -f condo rb
+      - name: Check migrations state
+        run: |
+          docker exec condo-container yarn workspace @app/rb makemigrations --check
+      - name: Run apps and tests
+        run: |
+          docker exec condo-container sh -c "(\
+          yarn workspace @app/condo start & \
+          yarn workspace @app/rb start & \
+          node bin/wait-apps-apis.js -f condo rb) && \
+          yarn workspace @app/rb test"
 
   run-registry-tests:
     name: Registry-importer Tests
