--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -248,7 +248,7 @@ jobs:
       - name: Setup databases (Linux Runners)
         if: matrix.os != 'windows-latest'
         run: |
-          docker compose up -d postgresdb valkey-cluster
+          docker compose up -d postgresdb redis
       - name: Prepare Python environment
         uses: actions/setup-python@v5
         with:
