--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -49,6 +49,7 @@
     "@types/tmp": "^0.2.6",
     "commander": "^11.0.0",
     "jest": "^29.7.0",
+    "testcontainers": "^10.18.0",
     "tmp": "^0.2.3",
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.6",
