ci(migrator): INFRA-873 job naming fixed

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -427,10 +427,8 @@ jobs:
         run: |
           npm i -g turbo
           yarn install --immutable
-      - name: Test webhooks utils
+      - name: Run @open-condo/migrator tests
         run: yarn workspace @open-condo/migrator test
-
-
 
   run-rb-tests:
     name: RB Tests
