--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -20,10 +20,7 @@
     "build": "tsup",
     "test": "jest"
   },
-  "bin": {
-    "condo-migrator": "dist/cli.js",
-    "migrator": "dist/cli.js"
-  },
+  "bin": "dist/cli.js",
   "bugs": {
     "url": "https://github.com/open-condo-software/condo/issues"
   },
@@ -47,7 +44,7 @@
     "@types/node": "^16",
     "@types/prompts": "^2.4.9",
     "@types/tmp": "^0.2.6",
-    "commander": "^11.0.0",
+    "execa": "^5.0.0",
     "jest": "^29.7.0",
     "testcontainers": "^10.18.0",
     "tmp": "^0.2.3",
@@ -57,6 +54,7 @@
   },
   "dependencies": {
     "cli-table3": "^0.6.5",
+    "commander": "^11.0.0",
     "dotenv": "^16.4.7",
     "glob": "^11.0.1",
     "ioredis": "^4.28.5",
