--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -6,9 +6,7 @@ on:
       - main
 
   # NOTE: change pull_request_target to pull_request if you want to change the CI in your branch
-  # TODO: RETURN THIS BACK:
-  pull_request:
-#  pull_request_target:
+  pull_request_target:
     types:
       - opened
       - reopened
