fix(migrator): INFRA-889 fix package.json and tsconfig

--- a/packages/migrator/package.json
+++ b/packages/migrator/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/SavelevMatthew"
   },
   "files": [
-    "bin"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
