hotfix(global): try to use single version for gitexporter

--- a/.github/workflows/gitexporter.yml
+++ b/.github/workflows/gitexporter.yml
@@ -1,5 +1,6 @@
 name: gitexporter
 on:
+  workflow_dispatch:
   schedule:
     - cron:  '10 */12 * * *'
   push:
@@ -9,10 +10,12 @@ on:
 jobs:
   gitexporter:
     name: Gitexporter
-    runs-on: self-hosted
+    runs-on: new-one
     steps:
       - name: Setup node environment
         uses: actions/setup-node@v4
+        with:
+          node-version: 14
       - name: Checkout
         uses: actions/checkout@v4
         with:
