hotfix(global): set node_version 14 for gitexporter action

--- a/.github/workflows/gitexporter.yml
+++ b/.github/workflows/gitexporter.yml
@@ -1,6 +1,5 @@
 name: gitexporter
 on:
-  workflow_dispatch:
   schedule:
     - cron:  '10 */12 * * *'
   push:
@@ -15,7 +14,8 @@ jobs:
       - name: Setup node environment
         uses: actions/setup-node@v4
         with:
-          node-version: 14
+          node-version: 14.x
+          cache: 'npm'
       - name: Checkout
         uses: actions/checkout@v4
         with:
