hotfix(global): set node_version 14 for gitexporter action (#5843)
* hotfix(global): try to use single version for gitexporter

* hotfix(global): set node_version 14 for gitexporter action

--- a/.github/workflows/gitexporter.yml
+++ b/.github/workflows/gitexporter.yml
@@ -9,10 +9,13 @@ on:
 jobs:
   gitexporter:
     name: Gitexporter
-    runs-on: self-hosted
+    runs-on: new-one
     steps:
       - name: Setup node environment
         uses: actions/setup-node@v4
+        with:
+          node-version: 14.x
+          cache: 'npm'
       - name: Checkout
         uses: actions/checkout@v4
         with:
