hotfix(global): rollback gitexporter action to run on all self-hosted runners

--- a/.github/workflows/gitexporter.yml
+++ b/.github/workflows/gitexporter.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   gitexporter:
     name: Gitexporter
-    runs-on: new-one
+    runs-on: self-hosted
     steps:
       - name: Setup node environment
         uses: actions/setup-node@v4
