--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
   # NOTE: change pull_request_target to pull_request if you want to change the CI in your branch
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - reopened
@@ -66,11 +66,6 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
-      - name: push new image for builds
-        run: |
-          docker pull moby/buildkit:buildx-stable-1
-          docker tag moby/buildkit:buildx-stable-1 ${{ secrets.DOCKER_REGISTRY }}/doma/utils/buildkit:buildx-stable-2
-          docker push ${{ secrets.DOCKER_REGISTRY }}/doma/utils/buildkit:buildx-stable-2
       - name: Prune repo to filter out yarn.lock and package.json
         run: |
           bash bin/prune.sh
