--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-fetch": "^2.6.7",
     "postcss": "^8.3.5",
     "postcss-less": "^6.0.0",
+    "prom-client": "^15.1.3",
     "stylelint": "^14.11.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^28.0.0",
