--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@faker-js/faker": "^7.6.0",
     "@graphql-codegen/cli": "1.21.8",
     "@graphql-codegen/typescript": "1.23.0",
+    "@jest/reporters": "^29.7.0",
     "@mono-pub/commit-analyzer": "^1.0.5",
     "@mono-pub/git": "^1.0.5",
     "@mono-pub/github": "^1.0.5",
@@ -54,6 +55,7 @@
     "node-fetch": "^2.6.7",
     "postcss": "^8.3.5",
     "postcss-less": "^6.0.0",
+    "prometheus-remote-write": "^0.5.0",
     "stylelint": "^14.11.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^28.0.0",
