refactor(miniapp-utils): INFRA-904 order of deps

--- a/packages/miniapp-utils/package.json
+++ b/packages/miniapp-utils/package.json
@@ -128,9 +128,9 @@
   },
   "peerDependencies": {
     "@apollo/client": ">=3.0.0",
+    "analytics": "^0.8.16",
     "react": ">=16.0.0",
-    "react-dom": ">=16.0.0",
-    "analytics": "^0.8.16"
+    "react-dom": ">=16.0.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.11.8",
