fix(global): INFRA-912 upgrade postgres image to 16.8

--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
   # NOTE: change pull_request_target to pull_request if you want to change the CI in your branch
-  pull_request_target:
+  pull_request:
     types:
       - opened
       - reopened
@@ -22,7 +22,7 @@ concurrency:
 env:
   DOCKER_IMAGE: condo/condo-image:${{ github.event.pull_request.head.sha || github.sha }}
   DOCKER_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/condo/condo-image:${{ github.event.pull_request.head.sha || github.sha }}
-  PG_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:16.4
+  PG_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:16.8
   REDIS_IMAGE_FULL: ${{ secrets.DOCKER_REGISTRY }}/doma/utils/redis:6.2
   REF: ${{ github.event.pull_request.head.sha || github.ref }}
 
@@ -66,6 +66,12 @@ jobs:
           submodules: recursive
           ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
           ref: ${{ env.REF }}
+      - name: Pull & push to registry
+        run: |
+          docker pull postgres:16.8
+          docker tag postgres:16.8 ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:16.8
+          docker push ${{ secrets.DOCKER_REGISTRY }}/doma/utils/postgres:16.8
+
       - name: Prune repo to filter out yarn.lock and package.json
         run: |
           bash bin/prune.sh
